# transipctl

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  acme-challenge-delete.transip  acme-challenge-set.transip  acme-validation-delete.sh  acme-validation-set.sh  delete-validation.sh  doc.sh  install.sh  interactive.sh  list.transip  run.sh  set-validation.sh  transipctl.1.md
.cargo/: config.toml
.github/workflows/: debian.yml  docker.yml  package.yml  rust.yml
crates/lines/: Cargo.toml
crates/lines/examples/: 01.rs
crates/lines/src/: lib.rs
crates/lines/src/editor/: mod.rs  prompt.rs
crates/lines/src/file/: mod.rs
crates/mdman/: Cargo.toml
crates/mdman/doc/: mdman.md
crates/mdman/src/: hbs.rs  lib.rs  main.rs  util.rs
crates/mdman/src/format/: man.rs  md.rs  text.rs
crates/mdman/tests/: compare.rs  invalid.rs
crates/rusty-lines/: Cargo.toml  README.md
crates/rusty-lines/examples/: 01.rs
crates/rusty-lines/src/: editor.rs  file.rs  lib.rs
crates/rusty-lines/src/editor/: mod.rs  prompt.rs
crates/rusty-lines/src/file/: mod.rs
crates/transip-command/: Cargo.toml  README.md
crates/transip-command-clap/: Cargo.toml
crates/transip-command-clap/src/: commands.txt  lib.rs
crates/transip-command-execute/: Cargo.toml
crates/transip-command-execute/examples/: 01.rs
crates/transip-command-execute/src/: lib.rs
crates/transip-command/src/: commands.txt  dns.rs  domain.rs  error.rs  invoice.rs  lib.rs  onerror.rs  product.rs  str_extension.rs  vps.rs
crates/transip-command/src/email/: mod.rs
crates/transip-command/src/parse/: mod.rs  transip.pest
crates/transip-execute/: Cargo.toml  README.md
crates/transip-execute/examples/: 01.rs  execute-commands.rs
crates/transip-execute/src/: lib.rs
crates/transipctl/: Cargo.toml  README.md  transipctl.1  transipctl.1.md  transipctl.1.txt  transipctl.man
crates/transipctl/docs/: transipctl.1  transipctl.md  transipctl.txt
crates/transipctl/scripts/: acme-validation-set.transip  certbot-challenge-delete.transip  certbot-challenge-set.transip  certbot-validation-delete.transip  certbot-validation-set.transip  delete  set
crates/transipctl/src/: error.rs  input.rs  log.rs  main.rs  transip.pest
crates/transipctl/src/command/: mod.rs
crates/transipctl/src/execution/: dns.rs  domain.rs  invoice.rs  mod.rs  product.rs  vps.rs
crates/xtask-build-man/: Cargo.toml
crates/xtask-build-man/src/: main.rs
example-scripts/: list-paulmin-nl.transip
src/: error.rs  input.rs  main.rs  parsing.rs  transip.pest  vps_command.rs
src/command/: dns.rs  domain.rs  invoice.rs  mod.rs  product.rs  vps.rs
src/execution/: dns.rs  domain.rs  invoice.rs  mod.rs  product.rs  vps.rs
