[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
strip = true
lto = true

[workspace.package]
authors = ["Paul Min"]
description = "Tool for manipulating and querying records on Transip Api Endpoint"
edition = "2021"
license = "MIT"
repository = "https://github.com/paulusminus/transipctl"
version = "0.3.2"
