[workspace]
members = [
    "crates/transipctl",
    "crates/transip-execute",
    "crates/transip-command",
    "crates/lines",
    "crates/mdman",
    "crates/xtask-build-man",
]
resolver = "2"

[profile.release]
strip = true
lto = true

[workspace.package]
authors = ["Paul Min"]
description = "Tool for manipulating and querying records on Transip Api Endpoint"
edition = "2021"
license = "MIT"
repository = "https://github.com/paulusminus/transipctl"
version = "0.4.0-dev.1"

[workspace.dependencies]
anyhow = "1.0.80"
handlebars = { version = "5.1.0", features = ["dir_source"] }
pulldown-cmark = { version = "0.10.0", default-features = false, features = ["html"] }
same-file = "1.0.6"
serde_json = "1.0.114"
snapbox = { version = "0.5.7", features = ["diff", "path", "term-svg"] }
url = "2.5.0"

[workspace.lints.rust]
rust_2018_idioms = "warn" # TODO: could this be removed?

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[workspace.lints.clippy]
all = { level = "allow", priority = -1 }
dbg_macro = "warn"
disallowed_methods = "warn"
print_stderr = "warn"
print_stdout = "warn"
self_named_module_files = "warn"
