[package]
name = "mdman"
authors.workspace = true
description = "Create a man page from markdown"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow = "1.0.75"
handlebars = { version = "3.5.5", features = ["dir_source"] }
pulldown-cmark = { version = "0.9.3", default-features = false }
same-file = "1.0.6"
serde_json = "1.0.108"
url = "2.4.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
