[package]
name = "mdman"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Creates a man page page from markdown."
publish = false
rust-version = "1.73"

[dependencies]
anyhow = "1.0.78"
handlebars = { version = "4.5.0", features = ["dir_source"] }
pulldown-cmark = "0.9.3"
same-file = "1.0.6"
serde_json = "1.0.108"
url = "2.5.0"

[dev-dependencies]
snapbox = "0.4.15"

[lints.rust]
rust_2018_idioms = "warn" 

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
all = { level = "allow", priority = -1 }
dbg_macro = "warn"
disallowed_methods = "warn"
print_stderr = "warn"
print_stdout = "warn"
self_named_module_files = "warn"

