[package]
name = "rusty-lines"
authors.workspace = true
description = "Abstract reading lines from tty or File"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.2.1"

[dependencies]
regex = "1.10.4"
rustyline = { version = "14.0.0", features = ["derive"] }
thiserror = "1.0.58"
tracing = "0.1.40"

[dev-dependencies]
itertools = "0.12.0"
