[package]
name = "rusty-lines"
authors.workspace = true
description = "Abstract reading lines from tty or File"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.3.2"

[dependencies]
regex = "1.11.1"
rustyline = { version = "15.0.0", features = ["derive"] }
tracing = "0.1.40"

[dev-dependencies]
itertools = "0.14.0"
