[package]
name = "transip-command-clap"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
shlex = "1.3.0"

[lints]
workspace = true
