[package]
name = "transip-command-execute"
authors.workspace = true
description = "execute commands on the Transip Api Endpoint"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde = "1.0.190"
transip = "0.1.4"
transip-command = { version = "0.1.3", path = "../transip-command" }

[dev-dependencies]
serde_json = "1.0.108"
