[package]
name = "transip-command"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "4.0.1"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
shlex = "1.3.0"

[features]
propagation = []

[lints]
workspace = true
