[package]
name = "transip-command"
authors.workspace = true
description.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
version = "0.4.2"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
shlex = "1.3.0"

[features]
propagation = []

[lints]
workspace = true
