[package]
name = "transip-execute"
authors.workspace = true
description = "execute commands on the Transip Api Endpoint"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.3.7"

[features]
propagation = ["dep:acme-validation-propagation", "transip-command/propagation"]

[dependencies]
acme-validation-propagation = { version = "0.1.5", optional = true }
serde = "1.0.190"
transip = "0.2"
transip-command = { version = "0.3", path = "../transip-command" }

[dev-dependencies]
serde_json = "1.0.108"
serde_yaml = "0.9.27"
