[package]
name = "transip-execute"
authors.workspace = true
description = "execute commands on the Transip Api Endpoint"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version = "1.76.0"

[features]
propagation = ["dep:acme-validation-propagation", "transip-command/propagation"]

[dependencies]
acme-validation-propagation = { version = "0.1.5", optional = true }
serde = "1.0.190"
transip = { version = "0.4" }
transip-command = { version = "0.4.1", path = "../transip-command" }

[dev-dependencies]
serde_json = "1.0.108"
