[package]
authors.workspace = true
description = "Tool for manipulating and querying records on Transip Api"
edition.workspace = true
license.workspace = true
name = "transipctl"
repository.workspace = true
version.workspace = true

[package.metadata.deb]
assets = [
    ["target/release/transipctl", "/usr/bin/", "755"],
    ["scripts/*", "/usr/bin/", "755"],
    ["transipctl.1", "/usr/share/man/man1/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/transipctl", dest = "/usr/bin/transipctl", mode = "755" },
    { source = "scripts/certbot-challenge-delete.transip", dest = "/usr/bin/certbot-challenge-delete.transip", mode = "755" },
    { source = "scripts/certbot-challenge-set.transip", dest = "/usr/bin/certbot-challenge-set.transip", mode = "755" },
    { source = "transipctl.1", dest = "/usr/share/man/man1/transipctl.1", mode = "644" },
]

[dependencies]
serde = "1.0.189"
serde_json = "1.0.107"
serde_yaml = "0.9.27"
thiserror = "1.0.49"
transip-command = { version = "0.2.1", path = "../transip-command" }
transip-execute = { version = "0.2.1", path = "../transip-execute" }
