[package]
authors.workspace = true
description = "Tool for manipulating and querying records on Transip Api"
edition.workspace = true
license.workspace = true
name = "transipctl"
repository.workspace = true
version = "0.3.6"

[package.metadata.deb]
assets = [
    ["target/release/transipctl", "/usr/bin/", "755"],
    ["scripts/*", "/usr/bin/", "755"],
    ["docs/transipctl.1", "/usr/share/man/man1/", "644"],
]
extended-description-file = "crates/transipctl/docs/transipctl.txt"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/transipctl", dest = "/usr/bin/transipctl", mode = "755" },
    { source = "scripts/certbot-validation-delete.transip", dest = "/usr/bin/certbot-validation-delete.transip", mode = "755" },
    { source = "scripts/certbot-validation-set.transip", dest = "/usr/bin/certbot-validation-set.transip", mode = "755" },
    { source = "docs/transipctl.1", dest = "/usr/share/man/man1/transipctl.1", mode = "644" },
]

[dependencies]
directories = "5.0.1"
serde = "1.0.189"
serde_json = "1.0.107"
serde_yaml = "0.9.27"
thiserror = "1.0.49"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
transip-execute = { version = "0.3", path = "../transip-execute", features = ["propagation"] }
