[package]
authors.workspace = true
description = "Tool for manipulating and querying records on Transip Api"
edition.workspace = true
license.workspace = true
name = "transipctl"
repository.workspace = true
version = "0.4.5"

[package.metadata.deb]
assets = [
  [
    "target/release/transipctl",
    "/usr/bin/",
    "755",
  ],
  [
    "scripts/*",
    "/usr/bin/",
    "755",
  ],
  [
    "docs/out/transipctl.1",
    "/usr/share/man/man1/",
    "644",
  ],
]
extended-description-file = "crates/transipctl/docs/transipctl.txt"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/transipctl", dest = "/usr/bin/transipctl", mode = "755" },
  { source = "scripts/acme-validation-delete.transip", dest = "/usr/bin/acme-validation-delete.transip", mode = "755" },
  { source = "scripts/acme-validation-set.transip", dest = "/usr/bin/acme-validation-set.transip", mode = "755" },
  { source = "docs/out/transipctl.1", dest = "/usr/share/man/man1/transipctl.1", mode = "644" },
]

[dependencies]
directories = "6.0.0"
rusty-lines = { version = "0.3.1", path = "../rusty-lines" }
serde = "1.0.214"
serde_json = "1.0.132"
thiserror = "2.0.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "local-time",
] }
transip-execute = { version = "0.4.0", path = "../transip-execute", features = [
  "propagation",
] }
