[package]
name = "xtask-build-man"
authors.workspace = true
description = "Build task for mdman"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.3.4"
publish = false
rust-version = "1.64.0"

[dependencies]
mdman = { git = "https://github.com/rust-lang/cargo", tag = "0.83.0" }
anyhow = "1.0.91"
