[package]
name = "xtask-build-man"
authors.workspace = true
description = "Build task for mdman"
edition = "2021"
license.workspace = true
repository.workspace = true
version = "0.3.5"
publish = false

[dependencies]
mdman = { git = "https://github.com/rust-lang/cargo", tag = "0.83.0" }
anyhow = "1.0.93"
